Feat: Ajustando Tratativa de erros

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,6 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.data.web.pageable.page-parameter=pagina
 spring.data.web.pageable.size-parameter=tamanho
 spring.data.web.sort.sort-parameter=ordem
+
+#Removendo StackTrace da resposta do spring
+server.error.include-stacktrace=never
