--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,6 @@ spring.data.web.sort.sort-parameter=ordem
 
 #Removendo StackTrace da resposta do spring
 server.error.include-stacktrace=never
+
+#Propriedades personalizadas
+api.security.token.secret=${JWT_SECRET:123456789}
